example/errors/interpret/var_is_not_initialized.box
set x: int;

println("x = " + x as str);
